Fixed large message overflow

--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -86,6 +86,7 @@ button {
   background-color: #607d8b;
   margin: 0px 10px 10px 10px;
   width: fit-content;
+  word-break: break-word;
   max-width: 50%;
   padding: 10px;
 }
